disabled Text Input

--- a/harmony.kv
+++ b/harmony.kv
@@ -180,7 +180,7 @@
                 id: recv_messages
                 size_hint: 1, 0.8
                 pos_hint: {"x":0, "y":0.1}
-                disabled: False
+                disabled: True
                 background_color: [0.2, 0.2, 0.2, 1]
                 foreground_color: [1, 1, 1, 1]
                 font_size: root.height / 40
